--- a/Medical/res/values/messages.xml
+++ b/Medical/res/values/messages.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
+    <string name="ok">好</string>
     <string name="sure">确定</string>
     <string name="cancle">取消</string>
-    <string name="ok">好</string>
-    <string name="wait">请稍候</string>
+    <string name="setting">设置</string>
+    <string name="prompt">提示</string>
+    <string name="wait">请稍候&#8230;</string>
     
     <string name="network_not_connected">网络连接失败，请检查网络设置</string>
     <string name="xml_parser_failed">数据解析异常</string>
@@ -18,6 +20,13 @@
     <string name="submit_report">提交报告</string>
     
     <!-- widget -->
+    <string name="xlistview_header_hint_normal">下拉刷新</string>
+    <string name="xlistview_header_hint_ready">松开刷新数据</string>
+    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
+    <string name="xlistview_header_last_time">上次更新时间：</string>
+    <string name="xlistview_footer_hint_normal">查看更多</string>
+    <string name="xlistview_footer_hint_ready">松开载入更多</string>
+    
     <string name="widget_pull_to_refresh_pull_label">下拉刷新</string>
     <string name="widget_pull_to_refresh_release_label">松开后刷新</string>
     <string name="widget_pull_to_refresh_refreshing_label">刷新\u2026</string>
