--- a/Medical/res/layout/activity_register.xml
+++ b/Medical/res/layout/activity_register.xml
@@ -3,6 +3,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+	
+    <LinearLayout
+        android:id="@+id/ll_setting_phone"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical" >
+	    <EditText 
+		    android:id="@+id/et_phone"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="请输入手机号"
+	        android:text="13738873386"/>
+	    <Button 
+		    android:id="@+id/btn_get_checksum"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="onClick"
+	        android:text="获取校校验码"/>
+	</LinearLayout>
+	
+    <LinearLayout
+        android:id="@+id/ll_setting_checksum"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical">
+	    <EditText 
+		    android:id="@+id/et_checksum"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="请输入校验码"/>
+	    <Button 
+		    android:id="@+id/btn_confirm_checksum"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="onClick"
+	        android:text="@string/sure"/>
+	</LinearLayout>
+	
+	<LinearLayout
+        android:id="@+id/ll_setting_password"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical">
+	    <EditText 
+		    android:id="@+id/et_setting_password"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="请设置密码"/>
+	     <EditText 
+		    android:id="@+id/et_setting_repassword"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="请再输入一遍"/>
+	    <Button 
+		    android:id="@+id/btn_setting_password"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="onClick"
+	        android:text="@string/sure"/>
+	</LinearLayout>
+	
+	<LinearLayout
+        android:id="@+id/ll_setting_done"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical">
+	    <Button 
+		    android:id="@+id/btn_done"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="onClick"
+	        android:text="完成"/>
+	</LinearLayout>
     
-
 </LinearLayout>
