--- a/Medical/res/layout/activity_login.xml
+++ b/Medical/res/layout/activity_login.xml
@@ -4,5 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <EditText 
+	    android:id="@+id/et_login_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入账户"/>
+     <EditText 
+	    android:id="@+id/et_login_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入密码"/>
+    <Button 
+	    android:id="@+id/btn_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="@string/sure"/>
+    
 
 </LinearLayout>
