--- a/Medical/res/values/colors.xml
+++ b/Medical/res/values/colors.xml
@@ -5,5 +5,8 @@
    	<color name="activity_gb">#f3f3f3</color>
    	<color name="module_top_bg">#0e75d4</color>
    	<color name="module_bottom_bg">#0e75d4</color>
+   	<color name="sliding_layout_left_bg">#00ccff</color>
+   	<color name="sliding_layout_left_menu_font_color">#000000</color>
+   	<color name="sliding_layout_right_bg">#e9e9e9</color>
 	
 </resources>
