--- a/Medical/res/layout/activity_change_password.xml
+++ b/Medical/res/layout/activity_change_password.xml
@@ -3,6 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+    <EditText 
+	    android:id="@+id/et_old_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText 
+	    android:id="@+id/et_new_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText 
+	    android:id="@+id/et_re_new_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <Button 
+	    android:id="@+id/btn_change_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="@string/sure"/>
 
 </LinearLayout>
