--- a/Medical/res/layout/module_top.xml
+++ b/Medical/res/layout/module_top.xml
@@ -5,7 +5,7 @@
     android:paddingRight="0dip"
     android:paddingTop="@dimen/spacing_1"
     android:paddingBottom="@dimen/spacing_1"
-    android:background="#0e75d4">
+    android:background="@color/module_top_bg">
     
     
     <Button 
