--- a/Medical/res/values/messages.xml
+++ b/Medical/res/values/messages.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
+    <string name="empty"></string>
     <string name="ok">好</string>
     <string name="sure">确定</string>
     <string name="cancle">取消</string>
