--- a/Medical/res/layout/module_top.xml
+++ b/Medical/res/layout/module_top.xml
@@ -10,12 +10,12 @@
     
     <Button 
         android:id="@+id/module_top_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="45.0dip"
+        android:layout_height="45.0dip"
         android:layout_alignParentLeft="true"
         android:onClick="onClick"
-        android:visibility="visible"
-        android:text="左"/>
+        android:background="@drawable/module_top_left_selector"
+        android:visibility="visible"/>
     
     <TextView
         android:id="@+id/module_top_title"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:onClick="onClick"
-        android:visibility="gone"
-        android:text="右"/>
+        android:background="@drawable/module_top_right_selector"
+        android:visibility="gone"/>
     
 </RelativeLayout>
