--- a/Medical/res/layout/module_main_function.xml
+++ b/Medical/res/layout/module_main_function.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:clickable="true"
+    android:onClick="onClick"
     android:gravity="center"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:background="@drawable/main_function_selector">
 
     <ImageView
         android:id="@+id/ic_main_function"
