--- a/Medical/res/layout/activity_main.xml
+++ b/Medical/res/layout/activity_main.xml
@@ -4,52 +4,41 @@
     android:id="@+id/main_slidingLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/activity_gb" >
+    android:background="@color/sliding_layout_bg" >
 
     <LinearLayout
         android:id="@+id/main_menu"
-        android:layout_width="270dip"
+        android:layout_width="270.0dip"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:background="@color/sliding_layout_left_bg"
+        android:background="@color/sliding_layout_bg"
         android:orientation="vertical"
         android:visibility="invisible" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="账户绑定"
-            android:textColor="@color/sliding_layout_left_menu_font_color"
-            android:textSize="@dimen/fontsize_h6" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="安全管理"
-            android:textColor="@color/sliding_layout_left_menu_font_color"
-            android:textSize="@dimen/fontsize_h6" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="用户日志"
-            android:textColor="@color/sliding_layout_left_menu_font_color"
-            android:textSize="@dimen/fontsize_h6" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="关于我们"
-            android:textColor="@color/sliding_layout_left_menu_font_color"
-            android:textSize="@dimen/fontsize_h6" />
+        <TextView 
+            android:id="@+id/main_location_title"
+            android:layout_width="match_parent"
+            android:layout_height="45.0dip"
+            android:gravity="center_vertical"
+            android:padding="5.0dip"
+            android:textSize="15.0dip"
+            android:background="#08b2c9"
+            android:textColor="#ffffff"
+            android:text="安存网络科技有限公司"/>
+        
+        <include android:id="@+id/more_item_1" layout="@layout/module_sliding_layout_left_item"/>
+        <include android:id="@+id/more_item_2" layout="@layout/module_sliding_layout_left_item"/>
+        <include android:id="@+id/more_item_3" layout="@layout/module_sliding_layout_left_item"/>
+        <include android:id="@+id/more_item_4" layout="@layout/module_sliding_layout_left_item"/>
+        
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/main_content"
-        android:layout_width="320dip"
+        android:layout_width="320.0dip"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:background="@color/sliding_layout_right_bg"
+        android:background="#ffffff"
         android:orientation="vertical"
         android:visibility="visible" >
 
@@ -66,38 +55,38 @@
                 
                 <LinearLayout 
 	                android:layout_width="match_parent"
-	                android:layout_height="100.0dip"
+	                android:layout_height="@dimen/main_function_height"
 	                android:orientation="horizontal">
 	                
-                    <include android:id="@+id/main_function_1" layout="@layout/module_main_function"/>
-                    <include android:id="@+id/main_function_2" layout="@layout/module_main_function"/>
+                    <include android:id="@+id/main_function_1" layout="@layout/module_sliding_layout_right_main_function_item"/>
+                    <include android:id="@+id/main_function_2" layout="@layout/module_sliding_layout_right_main_function_item"/>
 	                
 	            </LinearLayout>
 	            <LinearLayout 
 	                android:layout_width="match_parent"
-	                android:layout_height="100.0dip"
+	                android:layout_height="@dimen/main_function_height"
 	                android:orientation="horizontal">
 	                
-                    <include android:id="@+id/main_function_3" layout="@layout/module_main_function"/>
-                    <include android:id="@+id/main_function_4" layout="@layout/module_main_function"/>
+                    <include android:id="@+id/main_function_3" layout="@layout/module_sliding_layout_right_main_function_item"/>
+                    <include android:id="@+id/main_function_4" layout="@layout/module_sliding_layout_right_main_function_item"/>
 	                
 	            </LinearLayout>
 	            <LinearLayout 
 	                android:layout_width="match_parent"
-	                android:layout_height="100.0dip"
+	                android:layout_height="@dimen/main_function_height"
 	                android:orientation="horizontal">
 	                
-                    <include android:id="@+id/main_function_5" layout="@layout/module_main_function"/>
-                    <include android:id="@+id/main_function_6" layout="@layout/module_main_function"/>
+                    <include android:id="@+id/main_function_5" layout="@layout/module_sliding_layout_right_main_function_item"/>
+                    <include android:id="@+id/main_function_6" layout="@layout/module_sliding_layout_right_main_function_item"/>
 	                
 	            </LinearLayout>
 	            <LinearLayout 
 	                android:layout_width="match_parent"
-	                android:layout_height="100.0dip"
+	                android:layout_height="@dimen/main_function_height"
 	                android:orientation="horizontal">
 	                
-                    <include android:id="@+id/main_function_7" layout="@layout/module_main_function"/>
-                    <include android:id="@+id/main_function_8" layout="@layout/module_main_function"/>
+                    <include android:id="@+id/main_function_7" layout="@layout/module_sliding_layout_right_main_function_item"/>
+                    <include android:id="@+id/main_function_8" layout="@layout/module_sliding_layout_right_main_function_item"/>
 	                
 	            </LinearLayout>
                 
