--- a/Medical/res/values/dimens.xml
+++ b/Medical/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="fontsize_h8">32.0dip</dimen>
     <dimen name="fontsize_h9">34.0dip</dimen>
     
+    <dimen name="main_function_height">100.0dip</dimen>
+    
 </resources>
