--- a/Medical/res/layout/activity_main.xml
+++ b/Medical/res/layout/activity_main.xml
@@ -15,6 +15,27 @@
         android:orientation="vertical"
         android:visibility="invisible" >
 
+        <RelativeLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="150.0dip">
+	        
+	        <LinearLayout 
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentTop="true"
+	            android:orientation="horizontal">
+	            
+	        </LinearLayout>
+            <LinearLayout 
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_alignParentBottom="true"
+	            android:orientation="horizontal">
+	            
+	        </LinearLayout>
+            
+	    </RelativeLayout>
+        
         <TextView 
             android:id="@+id/main_location_title"
             android:layout_width="match_parent"
