--- a/Medical/res/values/colors.xml
+++ b/Medical/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
    	<color name="activity_gb">#f3f3f3</color>
+   	<color name="line">#efefef</color>
    	
    	<color name="sliding_layout_bg">#d9d9d9</color>
    	<color name="sliding_layout_left_bg_normal">#d9d9d9</color>
