--- a/Medical/res/layout/activity_main.xml
+++ b/Medical/res/layout/activity_main.xml
@@ -19,15 +19,64 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="150.0dip"
 	        android:background="@drawable/sliding_layout_left_top_bg">
-	        
-	        <TextView 
-	            android:layout_width="match_parent"
-	            android:layout_height="45.0dip"
-	            android:gravity="center_vertical"
-	            android:layout_centerInParent="true"
-	            android:padding="5.0dip"
-	            android:textSize="15.0dip"
-	            android:text="@string/app_name"/>
+	        <RelativeLayout 
+               android:layout_width="match_parent"
+               android:layout_height="100.0dip"
+               android:layout_alignParentTop="true">
+               
+               <Button 
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_centerVertical="true"
+                   android:padding="3.0dip"
+                   android:layout_margin="3.0dip"
+                   android:textColor="#ffffff"
+                   android:textSize="20.0dip"
+                   android:background="#08b2c9"
+                   android:text="登陆"/>
+               
+            </RelativeLayout>
+	        <RelativeLayout 
+               android:layout_width="match_parent"
+               android:layout_height="50.0dip"
+               android:layout_alignParentBottom="true">
+               
+	           <View
+	               android:id="@+id/personal_middle_bottom"
+			        android:layout_width="1.0dip"
+			        android:layout_height="match_parent"
+			        android:layout_marginLeft="40.0dip"
+			        android:layout_marginRight="40.0dip"
+			        android:layout_marginTop="10.0dip"
+			        android:layout_marginBottom="10.0dip"
+			        android:layout_centerInParent="true"
+			        android:background="@drawable/line" />
+	           
+	           <Button 
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:drawableLeft="@drawable/ic_message"
+                   android:layout_centerVertical="true"
+                   android:layout_toLeftOf="@id/personal_middle_bottom"
+                   android:background="@null"
+                   android:textColor="#ffffff"
+                   android:textSize="20.0dip"
+                   android:drawablePadding="5.0dip"
+                   android:text="消息"/>
+	           
+               <Button 
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:drawableLeft="@drawable/ic_collect"
+                   android:layout_centerVertical="true"
+                   android:layout_toRightOf="@id/personal_middle_bottom"
+                   android:background="@null"
+                   android:textColor="#ffffff"
+                   android:textSize="20.0dip"
+                   android:drawablePadding="5.0dip"
+                   android:text="收藏"/>
+               
+	        </RelativeLayout>
             
 	    </RelativeLayout>
         
