--- a/Medical/res/values/styles.xml
+++ b/Medical/res/values/styles.xml
@@ -17,5 +17,10 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="edittext_style" parent="@android:style/Widget.EditText">
+        <item name="android:layout_margin">5.0dip</item>
+        <item name="android:background">@drawable/edittext_selector</item>
+    </style>
 
 </resources>
