--- a/Medical/res/layout/module_top.xml
+++ b/Medical/res/layout/module_top.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:onClick="onClick"
-        android:background="@drawable/module_top_left_selector"
-        android:visibility="visible"/>
+        android:background="@drawable/module_top_left_1_selector"
+        android:visibility="gone"/>
     
     <TextView
         android:id="@+id/module_top_title"
@@ -24,5 +24,14 @@
         android:textSize="@dimen/fontsize_h5"
         android:layout_centerInParent="true" 
         android:text="@string/app_name"/>
+    
+    <Button 
+        android:id="@+id/module_top_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:onClick="onClick"
+        android:background="@drawable/module_top_right_1_selector"
+        android:visibility="gone"/>
     
 </RelativeLayout>
