--- a/Medical/res/layout/activity_test_list.xml
+++ b/Medical/res/layout/activity_test_list.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_slidingLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/activity_gb">
+    android:background="@color/activity_gb1">
 
     <LinearLayout
         android:id="@+id/main_menu"
