--- a/Medical/res/values/colors.xml
+++ b/Medical/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <color name="white">#ffffff</color>
-   	<color name="activity_gb">#f3f3f3</color>
+   	<color name="activity_gb1">#f3f3f3</color>
+   	<color name="activity_gb2">#eafeff</color>
    	<color name="line">#efefef</color>
    	
    	<color name="sliding_layout_bg">#d9d9d9</color>
