--- a/Medical/res/layout/module_bottom.xml
+++ b/Medical/res/layout/module_bottom.xml
@@ -8,6 +8,7 @@
     android:background="#0e75d4">
     
     <TextView
+        android:id="@+id/main_head_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
